install.yaml
# Copyright 2025 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: dracpu
  namespace: kube-system
  labels:
    tier: node
    app: dracpu
    k8s-app: dracpu
spec:
  selector:
    matchLabels:
      app: dracpu
  template:
    metadata:
      labels:
        tier: node
        app: dracpu
        k8s-app: dracpu
    spec:
      hostNetwork: true
      priorityClassName: system-node-critical
      tolerations:
      - operator: Exists
        effect: NoSchedule
      serviceAccountName: dracpu
      hostPID: true
      containers:
      - name: dracpu
        args:
        - /dracpu
        - --v=4
        - --cpu-device-mode=grouped
        image: us-central1-docker.pkg.dev/k8s-staging-images/dra-driver-cpu/dra-driver-cpu:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 5
        ports:
          - name: http
            containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "50Mi"
        securityContext:
          capabilities:
            add: ["NET_ADMIN", "SYS_ADMIN"]
        volumeMounts:
        - name: device-plugin
          mountPath: /var/lib/kubelet/plugins
        - name: plugin-registry
          mountPath: /var/lib/kubelet/plugins_registry
        - name: nri-plugin
          mountPath: /var/run/nri
        - name: cdi-dir
          mountPath: /var/run/cdi
      volumes:
      - name: device-plugin
        hostPath:
          path: /var/lib/kubelet/plugins
      - name: plugin-registry
        hostPath:
          path: /var/lib/kubelet/plugins_registry
      - name: nri-plugin
        hostPath:
          path: /var/run/nri
      - name: etc
        hostPath:
          path: /etc
      - name: cdi-dir
        hostPath:
          path: /var/run/cdi
          type: DirectoryOrCreate
